--- a/bibliography.bib
+++ b/bibliography.bib
@@ -41,7 +41,7 @@ Type= {Article},
     url = {https://www.ibm.com/developerworks/community/blogs/nlp/entry/tokenization?lang=en}
   }			
 		
-	@Article{glmnet,
+@Article{glmnet,
   title = {Regularization Paths for Cox's Proportional Hazards Model via Coordinate Descent},
   author = {Noah Simon and Jerome Friedman and Trevor Hastie and Rob Tibshirani},
   journal = {Journal of Statistical Software},
@@ -60,3 +60,9 @@ Type= {Article},
 	year = {2018},
 	author = {Daniel Jurafsky and James H. Martin},
 	url = {https://web.stanford.edu/~jurafsky/slp3/ed3book.pdf}}
+	
+@Misc{ridge, 
+title = {Lecture notes on ridge regression}, 
+year = {2018}, 
+author = {Wessel N. van Wieringen}, 
+url = {https://arxiv.org/pdf/1509.09169;Lecture}}
